# SlideAtlas-Server

./: #readme.rst#  .gitattributes  .gitignore  .gitmodules  Vagrantfile  config.py  connectome.a2config  contourWidget.js  histogram_images.py  kill_flask.py  readme.rst  requirements.txt  rtd_requirements.txt  run.py  run_apache.wsgi  run_connectome.py  run_gevent.py  run_gevents.py  run_gunicorn.py  run_tornado.py  run_websockets.py  scratch.py  setup.py  setup.sh  slideatlas.a2config  slideatlasdocstar.safe  tile.php  viewer.css  viewer.php
Utils/: attachments.py  build_pyramid.py  common_utils.py  create_thumb.py  create_user.py  dbschema.py  delimage.py  dump_meta.py  fix_openlayers_views.py  fix_thumbs.py  items_in_collection.py  logparse.py  migrate_mongoengine.py  migrate_to_admindb.py  process_all_databases.py  slide-atlas.org_austin1.lic  view_license.py  wipe_all_attachments.py
connectome/: __init__.py  site_local.py
docs/: Makefile  admin-rights.rst  common-utilities.rst  conf.py  deploy.rst  flask-auto.rst  get-started.rst  image-workflow.rst  index.rst  make.bat  plugins.rst  ptiffstore.rst  schema.rst  (+10 more)
testing/: CMakeLists.txt  CTestConfig.cmake  CTestTestfile.cmake  comparetools.py  ctest_driver.cmake  external_tests.py  imagecompare.py  internal_tests.py  list_tests.py  test_license.py  test_on_demodb.py
testing/frontend/selenium/: test_glViewer_menus.py  test_glViewer_previewNav.py
testing/regression/: test_on_demodb.py
testing/unit/: test_comparetools.py  test_imagecompare.py  test_misc.py  test_models.py  test_rest.py  test_tiff_reader.py
(+442 files in other folders)
