cmake_minimum_required(VERSION 2.8.0)
project(SlideAtlas NONE)

include(CTest)
find_package(PythonInterp)
if(NOT PYTHONINTERP_FOUND)
   mark_as_advanced(CLEAR PYTHON_EXECUTABLE)
endif()
set(SA_webroot "http://slide-atlas.org/" CACHE STRING "Webroot of the SlideAtlas instance to test.")
file(GLOB_RECURSE SA_FE_TEST_PATHS "${CMAKE_CURRENT_SOURCE_DIR}/frontend/*.py")
foreach(SA_TEST ${SA_FE_TEST_PATHS})
  get_filename_component(SA_file_name ${SA_TEST} NAME_WE)
  add_test(FE_${SA_file_name} "${PYTHON_EXECUTABLE}" "${SA_TEST}" "-r" "${SA_webroot}")
  set_tests_properties(FE_${SA_file_name} PROPERTIES FAIL_REGULAR_EXPRESSION "FAILED") 
endforeach()